--- a/src/app/success-alert/success-alert.component.html
+++ b/src/app/success-alert/success-alert.component.html
@@ -1,3 +1,3 @@
 <p>
-    Congrats! You have been successful at something today!
+    Congrats! <mark>Get it girl! </mark>You have been successful at something today!
 </p>
