--- a/src/app/warning-alert/warning-alert.component.css
+++ b/src/app/warning-alert/warning-alert.component.css
@@ -1,5 +1,5 @@
-p {color: red;
+p {
+background-color: rgb(167, 67, 67);
 text-align: center;
-font-family: Arial, Helvetica, sans-serif;
-font-size: 100 px;
+font-size: 100px;
 };
